--- a/staff_dashboard/templates/staff_dashboard/chats.html
+++ b/staff_dashboard/templates/staff_dashboard/chats.html
@@ -1,4 +1,4 @@
-{% extends "patient_dashboard/base.html" %}
+{% extends "staff_dashboard/base.html" %}
 {%load crispy_forms_tags%}
 {% block content %}
 <div class="content-section">
