--- a/patient_dashboard/templates/patient_dashboard/accounts.html
+++ b/patient_dashboard/templates/patient_dashboard/accounts.html
@@ -31,6 +31,17 @@
                         </li>
                     {%endfor%}
                 </ul>
+                <script>
+                    const chatSocket = new WebSocket(
+                        'ws://' +
+                        window.location.host +
+                        '/ws/apps/'
+                    );
+                
+                    chatSocket.onmessage = function (e) {
+                        window.location.reload()
+                    }
+                </script>
                 <hr>
             </div>
         </div>
