--- a/staff_dashboard/templates/staff_dashboard/chats.html
+++ b/staff_dashboard/templates/staff_dashboard/chats.html
@@ -20,16 +20,17 @@
             </div>
         </div>
     </div>
-    {{ request.user.username|json_script:"user_username" }}
+    {{ request.user.first_name|json_script:"user_first_name" }}
+    {{ request.user.last_name|json_script:"user_last_name" }}
     {{ room_name|json_script:"room-name" }}
     <script>
-        const user_username = JSON.parse(document.getElementById('user_username').textContent);
+        const user_first_name = JSON.parse(document.getElementById('user_first_name').textContent);
+        const user_last_name = JSON.parse(document.getElementById('user_last_name').textContent);
         document.querySelector('#submit').onclick = function (e) {
             const messageInputDom = document.querySelector('#input');
             const message = messageInputDom.value;
             chatSocket.send(JSON.stringify({
-                'message': message,
-                'username': user_username,
+                'message': user_first_name+' '+user_last_name+': '+message,
             }));
             messageInputDom.value = '';
         };
@@ -45,8 +46,7 @@
     
         chatSocket.onmessage = function (e) {
             const data = JSON.parse(e.data);
-            console.log(data)
-            document.querySelector('#chat-text').innerHTML += ((data.first_name+' '+data.last_name) + ': ' + data.message + '\n')
+            document.querySelector('#chat-text').innerHTML += (data.message)
         }
     </script>
 </div>
@@ -58,7 +58,7 @@
 <ul class="list-group">
     {%for users in all_users%}
     <a class="list-group-item list-group-item-light-action"
-        href="{%url 'patient-chat' 'users.username+cur_user.username'%}">{{users.first_name}} {{users.last_name}}</a>
+        href="{%url 'staff-chat' users.username|add:cur_user.username%}">{{users.first_name}} {{users.last_name}}</a>
     {%endfor%}
 </ul>
 </p>
