--- a/patient_dashboard/templates/patient_dashboard/accounts.html
+++ b/patient_dashboard/templates/patient_dashboard/accounts.html
@@ -39,7 +39,8 @@
                     );
                 
                     chatSocket.onmessage = function (e) {
-                        window.location.reload()
+                        const data = JSON.parse(e.data);
+                        if(data.message=='refresh_apps'){window.location.reload()}
                     }
                 </script>
                 <hr>
