--- a/staff_dashboard/templates/staff_dashboard/home.html
+++ b/staff_dashboard/templates/staff_dashboard/home.html
@@ -26,7 +26,8 @@
                     );
                 
                     chatSocket.onmessage = function (e) {
-                        window.location.reload()
+                        const data = JSON.parse(e.data);
+                        if(data.message=='refresh_apps'){window.location.reload()}
                     }
                 </script>
                 <hr>
